bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:2: error: ')' expected but 'return' found.
  if (((a<0 && b>0) || (a>0 && b<0)) return true
                                     ^